--- a/HotelDynamicSource/HotelDynamicSource.csproj
+++ b/HotelDynamicSource/HotelDynamicSource.csproj
@@ -63,6 +63,9 @@
       <Name>Orbitz</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Cache\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
