--- a/HDSInterfaces/HDSInterfaces.csproj
+++ b/HDSInterfaces/HDSInterfaces.csproj
@@ -48,32 +48,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\Address.cs" />
-    <Compile Include="Data\Amenities.cs" />
+    <Compile Include="Data\Location\Address.cs" />
+    <Compile Include="Data\Common\Amenities.cs" />
     <Compile Include="Data\Base\BaseImage.cs" />
-    <Compile Include="Data\CancellationPolicy.cs" />
-    <Compile Include="Data\CancellationPolicyTier.cs" />
-    <Compile Include="Data\DailyRate.cs" />
-    <Compile Include="Data\HotelImage.cs" />
-    <Compile Include="Data\HotelInformation.cs" />
-    <Compile Include="Data\HotelPolicy.cs" />
+    <Compile Include="Data\RoomAndRate\CancellationPolicy.cs" />
+    <Compile Include="Data\RoomAndRate\CancellationPolicyTier.cs" />
+    <Compile Include="Data\Location\City.cs" />
+    <Compile Include="Data\Location\Country.cs" />
+    <Compile Include="Data\RoomAndRate\DailyRate.cs" />
+    <Compile Include="Data\Hotel\HotelImage.cs" />
+    <Compile Include="Data\Hotel\HotelInformation.cs" />
+    <Compile Include="Data\Hotel\HotelPolicy.cs" />
     <Compile Include="Data\Base\Identification.cs" />
     <Compile Include="Data\Base\BasePerson.cs" />
-    <Compile Include="Data\Base\BaseHotel.cs" />
     <Compile Include="Data\Base\BaseRequest.cs" />
     <Compile Include="Data\Base\BaseItinerary.cs" />
-    <Compile Include="Data\CreditCard.cs" />
-    <Compile Include="Data\Customer.cs" />
-    <Compile Include="Data\Guest.cs" />
-    <Compile Include="Data\Hotel.cs" />
-    <Compile Include="Data\Itinerary.cs" />
-    <Compile Include="Data\Room.cs" />
-    <Compile Include="Data\RoomImage.cs" />
-    <Compile Include="Data\RoomRate.cs" />
-    <Compile Include="Data\Session.cs" />
+    <Compile Include="Data\Customer\CreditCard.cs" />
+    <Compile Include="Data\Customer\Customer.cs" />
+    <Compile Include="Data\Customer\Guest.cs" />
+    <Compile Include="Data\Hotel\Hotel.cs" />
+    <Compile Include="Data\RoomAndRate\Itinerary.cs" />
+    <Compile Include="Data\RoomAndRate\Room.cs" />
+    <Compile Include="Data\RoomAndRate\RoomImage.cs" />
+    <Compile Include="Data\RoomAndRate\RoomInformation.cs" />
+    <Compile Include="Data\RoomAndRate\RoomRate.cs" />
+    <Compile Include="Data\Common\Session.cs" />
     <Compile Include="HDSProviderBase.cs" />
     <Compile Include="HDSRequest.cs" />
-    <Compile Include="Data\Enums.cs" />
+    <Compile Include="Data\Common\Enums.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\Response\HotelAvailabilityRS.cs" />
