--- a/Expedia/Expedia.csproj
+++ b/Expedia/Expedia.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Helper\BookingHelper.cs" />
     <Compile Include="ExpediaManager.cs" />
     <Compile Include="Helper\CommonHelper.cs" />
+    <Compile Include="MappingManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
