--- a/Expedia/Expedia.csproj
+++ b/Expedia/Expedia.csproj
@@ -56,7 +56,9 @@
     <Compile Include="Helper\BookingHelper.cs" />
     <Compile Include="ExpediaManager.cs" />
     <Compile Include="Helper\CommonHelper.cs" />
-    <Compile Include="MappingManager.cs" />
+    <Compile Include="Helper\ContentHelper.cs" />
+    <Compile Include="Mapping\MappingContent.cs" />
+    <Compile Include="Mapping\MappingShopping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
