finish hotel content and hotel availability

--- a/HDSInterfaces/HDSInterfaces.csproj
+++ b/HDSInterfaces/HDSInterfaces.csproj
@@ -53,9 +53,10 @@
     <Compile Include="Data\Common\StayDate.cs" />
     <Compile Include="Data\Customer\ReservationInformation.cs" />
     <Compile Include="Data\Location\Address.cs" />
-    <Compile Include="Data\Common\Amenities.cs" />
+    <Compile Include="Data\Common\Amenity.cs" />
     <Compile Include="Data\Base\BaseImage.cs" />
     <Compile Include="Data\Common\SearchCriteria.cs" />
+    <Compile Include="Data\Response\HotelContentRS.cs" />
     <Compile Include="Data\RoomAndRate\CancellationPolicy.cs" />
     <Compile Include="Data\RoomAndRate\CancellationPolicyTier.cs" />
     <Compile Include="Data\Location\City.cs" />
