--- a/Expedia/Expedia.csproj
+++ b/Expedia/Expedia.csproj
@@ -57,8 +57,8 @@
     <Compile Include="ExpediaManager.cs" />
     <Compile Include="Helper\CommonHelper.cs" />
     <Compile Include="Helper\ContentHelper.cs" />
-    <Compile Include="Mapping\MappingContent.cs" />
-    <Compile Include="Mapping\MappingShopping.cs" />
+    <Compile Include="MappingResponse\MappingContent.cs" />
+    <Compile Include="MappingResponse\MappingShopping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
