--- a/HDSWebServices/HDSWebServices.csproj
+++ b/HDSWebServices/HDSWebServices.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GetData.aspx" />
+    <Content Include="index.html" />
     <Content Include="Service1.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
