--- a/Expedia/Expedia.csproj
+++ b/Expedia/Expedia.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.ServiceModel">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -50,10 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helper\BookingHelper.cs" />
+    <Compile Include="BookingManager.cs" />
     <Compile Include="ExpediaManager.cs" />
     <Compile Include="Helper\CommonHelper.cs" />
-    <Compile Include="Helper\ContentHelper.cs" />
+    <Compile Include="ContentManager.cs" />
     <Compile Include="MappingResponse\MappingContent.cs" />
     <Compile Include="MappingResponse\MappingShopping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,7 +73,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Helper\ShoppingHelper.cs" />
+    <Compile Include="ShoppingManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HDSInterfaces\HDSInterfaces.csproj">
