--- a/HDSInterfaces/HDSInterfaces.csproj
+++ b/HDSInterfaces/HDSInterfaces.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Data\Common\ExpediaSpecific.cs" />
     <Compile Include="Data\Common\OrbitzSpecific.cs" />
+    <Compile Include="Data\Common\PropertyType.cs" />
     <Compile Include="Data\Exception\WarningAndError.cs" />
     <Compile Include="Data\Location\Location.cs" />
     <Compile Include="Data\Common\StayDate.cs" />
