--- a/HDSInterfaces/HDSInterfaces.csproj
+++ b/HDSInterfaces/HDSInterfaces.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Data\Common\Amenity.cs" />
     <Compile Include="Data\Base\BaseImage.cs" />
     <Compile Include="Data\Common\SearchCriteria.cs" />
+    <Compile Include="Data\Location\State.cs" />
     <Compile Include="Data\Response\HotelContentRS.cs" />
     <Compile Include="Data\RoomAndRate\CancellationPolicy.cs" />
     <Compile Include="Data\RoomAndRate\CancellationPolicyTier.cs" />
