--- a/OrbitzExportStaticFile/OrbitzExportStaticFile.csproj
+++ b/OrbitzExportStaticFile/OrbitzExportStaticFile.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AmenityCode.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="ExportManager.cs" />
     <Compile Include="OutputFormatter.cs" />
     <Compile Include="Program.cs" />
