--- a/OrbitzExportStaticFile/App.config
+++ b/OrbitzExportStaticFile/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="inputXmlFile" value="c:\temp\HAA-en_GB.xml"/>
+    <add key="inputXmlFile" value="C:\Users\c155628\Desktop\PWS\Static Files\HAA-en_GB.xml"/>
     <add key="outputFolder" value="c:\temp\json"/>
     <add key="languageCode" value="en"/>
   </appSettings>
