change something to run

--- a/OrbitzExportStaticFile/App.config
+++ b/OrbitzExportStaticFile/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="inputXmlFile" value="C:\Users\c155628\Desktop\PWS\Static Files\HAA-en_GB.xml"/>
-    <add key="outputFolder" value="c:\temp\json"/>
+    <add key="outputFolder" value="c:\temp\output"/>
     <add key="languageCode" value="en"/>
   </appSettings>
 </configuration>
